--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "burger",
   "version": "1.0.0",
   "description": "burger app using Node express mysql",
-  "main": "index.js",
+  "main": "burger.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node burger.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -16,7 +16,7 @@
   "bugs": {
     "url": "https://github.com/bilalsarimeseli/eat-the-burger/issues"
   },
-  "homepage": "https://github.com/bilalsarimeseli/eat-the-burger#readme",
+  "homepage": "https://github.com/bilalsarimeseli/burger#readme",
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
